--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,9 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+one1:
   Entry: MyString
-  Court_id: 1
+  Court_id: courtone
 
-two:
-  Entry: MyString
-  Court_id: 1
