--- a/test/fixtures/courts.yml
+++ b/test/fixtures/courts.yml
@@ -1,19 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 courtone:
-  Picture_id: MyString
-  Light: false
-  Water: false
-  Membership: false
-  Address: MyString
-  Name: goodbye
-  Picture_id: http://goodtidings.org/assets/galleries/29/2009_adonal_foyle_basketball_court_at_william_wilkins_park_-_oakland.jpg
+  light: false
+  water: false
+  membership: false
+  address: MyString
+  name: goodbye
+  picture_id: http://goodtidings.org/assets/galleries/29/2009_adonal_foyle_basketball_court_at_william_wilkins_park_-_oakland.jpg 
+  latitude: 33.651949
+  longitude: -117.743431
 
 courttwo:
-  Picture_id: MyString
-  Light: false
-  Water: false
-  Membership: false
-  Address: MyString
-  Name: Hello
-  Picture_id: http://www.courtsoftheworld.com/upload/courts/249/0/COTW_Lakeview-Park_1244671492.jpg
+  light: false
+  water: false
+  membership: false
+  address: MyString
+  name: Hello
+  picture_id: http://www.courtsoftheworld.com/upload/courts/249/0/COTW_Lakeview-Park_1244671492.jpg
